# manars-kitchen

./: .gitignore  CHANGELOG.md  Makefile  README.md  manar.py  manar2.py  manars-kitchen.cabal  notes.txt  station.py  time.py  zero-sched-2017-03-05.txt
app/: Main.hs
cli/: Main.hs
cli/CLI/: App.hs  Commands.hs  Display.hs  Resolve.hs  RpcClient.hs
demo/: restaurant-setup.txt
openspec/: web-interface-roadmap.md
openspec/changes/archive/2026-04-08-improve-interactive-cli-ux/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-update-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-calendar-foundation/: proposal.md  tasks.md
openspec/changes/archive/2026-04-11-cross-draft-validation/: design.md  tasks.md
openspec/changes/archive/2026-04-11-draft-system/: design.md  proposal.md
openspec/changes/archive/2026-04-11-employment-status/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-freeze-line/: proposal.md  tasks.md
openspec/changes/archive/2026-04-11-hint-integration/: design.md  tasks.md
openspec/changes/archive/2026-04-11-pay-periods/: design.md  proposal.md
openspec/changes/archive/2026-04-12-admin-gui-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-auth-role-access/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-internal-pub-sub/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-persistent-hint-sessions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-rest-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-rpc-over-rest/: design.md  proposal.md  (+1 more)
openspec/changes/calendar-foundation/: design.md  tasks.md
openspec/changes/cross-draft-validation/: proposal.md  tasks.md
openspec/changes/draft-system/: tasks.md
openspec/changes/employment-status/: tasks.md
openspec/changes/freeze-line/: design.md  tasks.md
openspec/changes/hint-integration/: proposal.md  tasks.md
openspec/changes/names-not-ids/: design.md  tasks.md
openspec/changes/pay-periods/: tasks.md
openspec/changes/pub-sub-cleanup/: proposal.md
openspec/changes/station-crud/: tasks.md
openspec/changes/structured-audit-log/: tasks.md
openspec/changes/topic-routed-pub-sub/: design.md  tasks.md
openspec/changes/worker-admin-ui/: design.md  proposal.md  tasks.md
openspec/changes/worker-name-addressing/: proposal.md  tasks.md
openspec/specs/assign-name-args/: spec.md
openspec/specs/audit-log/: spec.md
openspec/specs/audit-subscriber/: spec.md
openspec/specs/calendar-history/: spec.md
openspec/specs/calendar-storage/: spec.md
openspec/specs/command-classifier/: spec.md
openspec/specs/compact-schedule-display/: spec.md
openspec/specs/dashboard-shell/: spec.md
openspec/specs/draft-seeding/: spec.md
openspec/specs/draft-session/: spec.md
openspec/specs/draft-validation/: spec.md
openspec/specs/employment-status/: spec.md
openspec/specs/event-stream-endpoint/: spec.md
openspec/specs/hint-cli/: spec.md
openspec/specs/hint-persistence/: spec.md
openspec/specs/hint-rebase/: spec.md
openspec/specs/name-based-entity-resolution/: spec.md
openspec/specs/pay-period-config/: spec.md
openspec/specs/pin-name-args/: spec.md
openspec/specs/progress-events/: spec.md
openspec/specs/pub-sub-bus/: spec.md
openspec/specs/readme-cli-features/: spec.md
openspec/specs/rest-api-server/: spec.md
openspec/specs/rpc-execute/: spec.md
openspec/specs/session-context/: spec.md
openspec/specs/session-lifecycle/: spec.md
openspec/specs/skill-create-guard/: spec.md
openspec/specs/skill-ui/: spec.md
openspec/specs/skill-view/: spec.md
openspec/specs/skills-pages/: spec.md
openspec/specs/static-file-serving/: spec.md
openspec/specs/station-cli-parity/: spec.md
openspec/specs/station-rest-names/: spec.md
openspec/specs/topic-bus/: spec.md
openspec/specs/two-level-help/: spec.md
openspec/specs/user-create-no-worker/: spec.md
openspec/specs/user-delete-safe/: spec.md
openspec/specs/user-rename/: spec.md
openspec/specs/web-login/: spec.md
openspec/specs/web-terminal/: spec.md
openspec/specs/what-if-name-args/: spec.md
openspec/specs/worker-cli-name-args/: spec.md
openspec/specs/worker-deactivate/: spec.md
openspec/specs/worker-delete/: spec.md
openspec/specs/worker-list-endpoint/: spec.md
openspec/specs/worker-name-resolution/: spec.md
openspec/specs/worker-rest-name-routes/: spec.md
openspec/specs/worker-status-filtering/: spec.md
openspec/specs/worker-view/: spec.md
python/: manar.py  worker.py  worker_capability.py
server/: Main.hs
server-app/: Main.hs
server/Server/: Api.hs  Auth.hs  Error.hs  EventStream.hs  Execute.hs  Handlers.hs  Json.hs  Rpc.hs
src/: Utils.hs
src/Audit/: CommandMeta.hs
src/Auth/: Password.hs  Types.hs
src/CLI/: App.hs  Commands.hs  Display.hs  Resolve.hs
src/Domain/: Absence.hs  Calendar.hs  Diagnosis.hs  Hint.hs  Optimizer.hs  PayPeriod.hs  Pin.hs  Schedule.hs  Scheduler.hs  SchedulerConfig.hs  Shift.hs  Skill.hs  Transaction.hs  Types.hs  Worker.hs
src/Export/: JSON.hs
src/Repo/: SQLite.hs  Schema.hs  Serialize.hs  Types.hs
src/Service/: Absence.hs  Auth.hs  Calendar.hs  Config.hs  Draft.hs  DraftValidation.hs  FreezeLine.hs  HintRebase.hs  Optimize.hs  PubSub.hs  Schedule.hs  User.hs  Worker.hs
test/: ApiSpec.hs  AuditSpec.hs  CalendarSpec.hs  DraftSpec.hs  DraftValidationSpec.hs  FreezeLineSpec.hs  HintE2ESpec.hs  HintIntegrationSpec.hs  HintSessionSpec.hs  IntegrationSpec.hs  PubSubSpec.hs  SessionSpec.hs  ShellWordsSpec.hs  Spec.hs  TestSeed.hs  UnitSpec.hs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/api/: client.ts  execute.ts  skills.ts  stations.ts  workers.ts
web/src/components/: AppShell.tsx  DashboardPage.tsx  LoginPage.tsx  Sidebar.tsx  SkillDetailPage.tsx  SkillsListPage.tsx  StationDetailPage.tsx  StationsListPage.tsx  Terminal.tsx  WorkerDetailPage.tsx  WorkersListPage.tsx
web/src/hooks/: useSSE.tsx
(+93 files in other folders)
