cabal-version:       2.2

name:                manars-kitchen
version:             0.1.0.0
synopsis:            Restaurant worker scheduling with algebraic domain model
license:             BSD-3-Clause
license-file:        LICENSE
author:              Bob Grudem
maintainer:          example@example.com
copyright:           2026 Bob Grudem
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Domain.Types
                     , Domain.Schedule
                     , Domain.Transaction
                     , Domain.Skill
                     , Domain.Worker
                     , Domain.Scheduler
                     , Domain.Absence
                     , Domain.Hint
                     , Domain.Diagnosis
                     , Domain.Calendar
                     , Domain.Shift
                     , Domain.SchedulerConfig
                     , Domain.Pin
                     , Domain.Optimizer
                     , Auth.Types
                     , Auth.Password
                     , Repo.Types
                     , Repo.Schema
                     , Repo.Serialize
                     , Repo.SQLite
                     , Service.Auth
                     , Service.Schedule
                     , Service.Worker
                     , Service.Absence
                     , Service.Config
                     , Service.Optimize
                     , Service.Calendar
                     , Service.Draft
                     , Export.JSON
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time
                     , random
                     , QuickCheck
                     , hspec
                     , sqlite-simple
                     , direct-sqlite
                     , bcrypt
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints

executable manars-kitchen
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
  ghc-options:         -Wall
                       -Wcompat

executable manars-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       CLI.App
                     , CLI.Commands
                     , CLI.Display
                     , CLI.Resolve
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , containers
                     , time
                     , bytestring
                     , aeson
  ghc-options:         -Wall
                       -Wcompat

test-suite manars-kitchen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CalendarSpec
                     , DraftSpec
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , hspec
                     , containers
                     , time
                     , directory
  ghc-options:         -Wall
                       -Wcompat

source-repository head
  type:     git
  location: https://github.com/githubuser/manars-kitchen
