cabal-version:       2.2

name:                manars-kitchen
version:             0.1.0.0
synopsis:            Restaurant worker scheduling with algebraic domain model
license:             BSD-3-Clause
license-file:        LICENSE
author:              Bob Grudem
maintainer:          example@example.com
copyright:           2026 Bob Grudem
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
                     , server
  exposed-modules:     Domain.Types
                     , Domain.Schedule
                     , Domain.Transaction
                     , Domain.Skill
                     , Domain.Worker
                     , Domain.Scheduler
                     , Domain.Absence
                     , Domain.Hint
                     , Domain.Diagnosis
                     , Domain.Calendar
                     , Domain.Shift
                     , Domain.SchedulerConfig
                     , Domain.Pin
                     , Domain.Optimizer
                     , Domain.PayPeriod
                     , Auth.Types
                     , Auth.Password
                     , Repo.Types
                     , Repo.Schema
                     , Repo.Serialize
                     , Repo.SQLite
                     , Service.Auth
                     , Service.Schedule
                     , Service.Worker
                     , Service.Absence
                     , Service.Config
                     , Service.Optimize
                     , Service.Calendar
                     , Service.Draft
                     , Service.DraftValidation
                     , Service.FreezeLine
                     , Service.PubSub
                     , Service.HintRebase
                     , Audit.CommandMeta
                     , Export.JSON
                     , Server.Api
                     , Server.Auth
                     , Server.Error
                     , Server.Handlers
                     , Server.Json
                     , Server.Rpc
                     , Server.EventStream
                     , Server.Execute
                     , CLI.Commands
                     , CLI.Display
                     , CLI.App
                     , CLI.Resolve
                     , Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time
                     , random
                     , QuickCheck
                     , hspec
                     , sqlite-simple
                     , direct-sqlite
                     , bcrypt
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , text
                     , servant
                     , servant-server
                     , http-api-data
                     , wai
                     , http-types
                     , directory
                     , process
                     , regex-posix
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints

executable manars-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       CLI.RpcClient
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , containers
                     , time
                     , bytestring
                     , aeson
                     , servant
                     , servant-client
                     , http-client
                     , http-types
                     , text
  ghc-options:         -Wall
                       -Wcompat

test-suite manars-kitchen-unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , cli
  main-is:             UnitSpec.hs
  other-modules:       CalendarSpec
                     , DraftSpec
                     , DraftValidationSpec
                     , FreezeLineSpec
                     , ShellWordsSpec
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , hspec
                     , containers
                     , time
                     , directory
                     , bytestring
                     , aeson
                     , text
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , http-client
                     , http-types
                     , sqlite-simple
  ghc-options:         -Wall
                       -Wcompat

test-suite manars-kitchen-integration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , cli
  main-is:             IntegrationSpec.hs
  other-modules:       
                       HintIntegrationSpec
                     , HintSessionSpec
                     , HintE2ESpec
                     , AuditSpec
                     , SessionSpec
                     , PubSubSpec
                     , ApiSpec
                     , ShellWordsSpec
                     , CLI.RpcClient
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , hspec
                     , containers
                     , time
                     , directory
                     , bytestring
                     , aeson
                     , text
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , http-client
                     , http-types
                     , sqlite-simple
  ghc-options:         -Wall
                       -Wcompat

executable manars-server
  hs-source-dirs:      server-app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , manars-kitchen
                     , servant-server
                     , wai
                     , wai-app-static
                     , warp
  ghc-options:         -Wall
                       -Wcompat

source-repository head
  type:     git
  location: https://github.com/githubuser/manars-kitchen
